--- a/package.json
+++ b/package.json
@@ -3,23 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "ley-new": "f(){ touch migrations/$(date *+%s)-$1.ts; }; f",
+    "lint": "next lint",
+    "migrate": " dotenv -- ley --require tsm",
+    "start": "next start"
   },
   "dependencies": {
+    "dotenv-cli": "^7.2.1",
+    "dotenv-safe": "^8.2.0",
+    "ley": "^0.8.1",
     "next": "13.4.5",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.4",
     "secure-json-parse": "^2.7.0",
-    "sharp": "^0.32.1"
+    "server": "^1.0.38",
+    "server-only": "^0.0.1",
+    "sharp": "^0.32.1",
+    "tsm": "^2.3.0"
   },
   "devDependencies": {
+    "@types/dotenv-safe": "^8.1.2",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
-    "eslint-config-upleveled": "^4.5.1",
+    "eslint-config-upleveled": "^4.7.2",
     "stylelint": "^15.7.0",
     "stylelint-config-upleveled": "^1.0.2",
     "typescript": "^5.1.3"
