--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv-cli": "^7.2.1",
     "dotenv-safe": "^8.2.0",
     "ley": "^0.8.1",
@@ -23,7 +24,8 @@
     "server": "^1.0.38",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
-    "tsm": "^2.3.0"
+    "tsm": "^2.3.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/dotenv-safe": "^8.1.2",
