--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PGHOST=localhost
-PGUSERNAME= skateboards
-PGPASSWORD= skateboards
-PGDATABASE= skateboards
+PGUSERNAME= xxxx
+PGPASSWORD= xxxx
+PGDATABASE= xxxx
